[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mist-sdk"
version = "0.0.1"
description = "Python SDK for the MIST stack (MatchSpec, InferMux, SchemaFlux, TokenTrace)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Grey Newell"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://miststack.dev"
Repository = "https://github.com/greynewell/mist-go"

[tool.setuptools.packages.find]
include = ["mist*"]

[tool.setuptools.package-data]
mist = ["bin/*"]
